--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "@toast-ui/react-image-editor": "^1.2.1",
+    "downloadjs": "^1.4.7",
     "material-ui-core": "^5.0.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-image": "^3.3.0",
